Update with gravity

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: '👁️ Eye•Set: Thd Camera Project'
+title: '👁️ Eye•Set: The Camera Project'
 author:
   name: Marek Smigielski
   email: marek.smigielski@gmail.com
@@ -6,11 +6,11 @@ description: >-
   Eye•Set is a mesh-connected camera trap system built for wildlife photographers and field researchers.
 remote_theme: jekyll/minima@0b7ca6b
 
-
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-remote-theme
+  - jekyll-sitemap
 
 minima:
   nav_pages:
